<resources>
    <string name="app_name">Sportteam</string>
    <string name="profile">Profile</string>
    <string name="search_events">Search Events</string>
    <string name="notifications">Notifications</string>
    <string name="events">Events</string>
    <string name="fields">Fields</string>
    <string name="friends">Friends</string>
    <string name="alarms">Alarms</string>
    <string name="settings">Settings</string>
    <string name="channel_name">General channel</string>
    <string name="channel_description">All app\'s notifications use this channel</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_clear_filter">Clear Filters</string>
    <string name="action_clear_notifications">Clear Notifications</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_vote">Vote</string>
    <string name="action_create_event">New Event</string>
    <string name="action_event_requests">Event Requests Sent</string>
    <string name="action_advanced_search">Advanced Search</string>
    <string name="action_search_users">Search Users</string>
    <string name="pick_photo_from">Pick photo from…</string>
    <string name="toast_need_write_permission">Need permission to store image</string>
    <string name="dialog_msg_are_you_sure">Are you sure?</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="infinite">Infinite</string>
    <string name="error">Error</string>
    <string name="loading">Performing action…</string>
    <string name="nothing_found">Nothing found</string>
    <string name="error_check_conn">Error: Check internet connection</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_maps">Map</string>
    <string name="sports">Sports</string>
    <string name="running">Running</string>
    <string name="biking">Biking</string>
    <string name="basketball">Basketball</string>
    <string name="skating">Skating</string>
    <string name="football_5">Football 5</string>
    <string name="football_7">Football 7</string>
    <string name="football_11">Football 11</string>
    <string name="tennis">Tennis</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="create_new_user_button">Not a member? Sing up now.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dialog_msg_forgot_password">We can send you an email with a link to change the password.</string>
    <string name="send_it">Send it</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="reauthenticate">Re-authenticate</string>
    <string name="email_sent">Email sent</string>
    <string name="dialog_title_verify_email">You have to verify your email</string>
    <string name="dialog_msg_verify_email">Do you want to resend a verification email? Make sure you check
        spam folder</string>
    <string name="new_user_title">New User</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_city">City</string>
    <string name="error_not_unique_email">This email address already exists</string>
    <string name="error_not_unique_name">This name is already in use</string>
    <string name="error_incorrect_name">This name is too long</string>
    <string name="error_incorrect_age">Age should be greater than 12 and less than 100</string>
    <string name="error_invalid_age">Not a valid number</string>
    <string name="toast_login_success">Log in successful</string>
    <string name="toast_create_user_fail">User creation failed</string>
    <string name="toast_login_failure">Log in failure</string>
    <string name="error_invalid_name">Name is invalid</string>
    <string name="error_invalid_photo">Photo is invalid</string>
    <string name="error_invalid_city">City is invalid</string>
    <string name="error_invalid_sport_list">Sport list is invalid</string>
    <string name="dialog_msg_delete_all_notifications">All notifications will be deleted</string>
    <string name="dialog_msg_delete_one_notification">This notification will be deleted</string>
    <string name="toast_notification_load_error">Notifications could not be loaded</string>
    <string name="notification_title_friend_request_received">New friend request</string>
    <string name="notification_title_friend_request_accepted">New friend!!</string>
    <string name="notification_title_event_invitation_received">New event invitation</string>
    <string name="notification_title_event_invitation_accepted">Event invitation accepted</string>
    <string name="notification_title_event_invitation_declined">Event invitation declined</string>
    <string name="notification_title_event_request_received">New event request</string>
    <string name="notification_title_event_request_accepted">Event request accepted</string>
    <string name="notification_title_event_request_declined">Event request declined</string>
    <string name="notification_title_event_complete">Event complete</string>
    <string name="notification_title_event_someone_quit">Event incomplete</string>
    <string name="notification_title_event_create">New Event</string>
    <string name="notification_title_event_edit">Event edited</string>
    <string name="notification_title_event_delete">Event cancelled</string>
    <string name="notification_title_event_expelled">Expelled from an Event</string>
    <string name="notification_title_alarm_event">Event coincidence</string>
    <string name="notification_msg_friend_request_received">You have a new friend request</string>
    <string name="notification_msg_friend_request_accepted">You have a new friend!!</string>
    <string name="notification_msg_event_invitation_received">You have a new event invitation</string>
    <string name="notification_msg_event_invitation_accepted">Your event invitation had been accepted</string>
    <string name="notification_msg_event_invitation_declined">Your event invitation had been declined</string>
    <string name="notification_msg_event_request_received">Some user wants to participate in your event</string>
    <string name="notification_msg_event_request_accepted">Your event request had been accepted</string>
    <string name="notification_msg_event_request_declined">Your event request had been declined</string>
    <string name="notification_msg_event_complete">The event is complete</string>
    <string name="notification_msg_event_someone_quit">The event isn\'t complete anymore</string>
    <string name="notification_msg_event_create">An event have been created by your friend</string>
    <string name="notification_msg_event_edit">The event has been changed</string>
    <string name="notification_msg_event_delete">The %1$s event in %2$s on %3$s has been cancelled</string>
    <string name="notification_msg_event_expelled">You have been expelled from an event by the owner</string>
    <string name="notification_msg_alarm_event">Some event coincidence in your area</string>
    <string name="pref_city_title">Current City</string>
    <string name="pref_city_dialog">Select current City</string>
    <string name="pref_email_title">Email Address</string>
    <string name="pref_email_dialog">Change Email address</string>
    <string name="pref_password_title">Change Password</string>
    <string name="pref_password_dialog">New password</string>
    <string name="pref_reset_title">Delete User data</string>
    <string name="dialog_msg_reset_user">Are you sure you want to DELETE ALL USER\'S DATA?
        Events, invitations, friends… everything will be deleted. Only keeps on database your personal info like name,
        city or sports.</string>
    <string name="pref_delete_title">Delete User</string>
    <string name="dialog_msg_delete_user">Are you sure you want to DELETE USER?
        Events, invitations, friends… everything will be deleted, including your personal info like name,
        city or sports.</string>
    <string name="toast_error_deleting_user">Error deleting user</string>
    <string name="toast_user_reset_success">User\'s data deleted</string>
    <string name="toast_change_email_equals">New email must be different</string>
    <string name="toast_email_updated">Email updated</string>
    <string name="toast_error_updating_email">Error updating email</string>
    <string name="dialog_title_email_changed">Your email have been changed</string>
    <string name="toast_password_updated">Password updated</string>
    <string name="toast_error_updating_password">Error updating password</string>
    <string name="dialog_msg_email_changed">You will receive an email in the address you provided when registering for
        the first time in case you want to revert the process, and another email in the new address to confirm it.
        To re-identify you when you close this session, you must confirm the email sent to the new address.</string>
    <string name="dialog_title_add_sport_to_field">Add a sport to this field</string>
    <string name="pick_sport">Pick a sport</string>
    <string name="punctuation">Punctuation</string>
    <string name="toast_add_sport_success">Sport added</string>
    <string name="toast_should_select_place">You should select a place</string>
    <string name="toast_sport_invalid">Sport invalid</string>
    <string name="created_by">Created by: %1$s</string>
    <string name="dialog_title_vote">Rate this court</string>
    <string name="dialog_vote_error">Invalid vote</string>
    <string name="select_place">Select a place</string>
    <string name="select_field">Select field</string>
    <string name="open_24h">Open 24h</string>
    <string name="opening_time">Opening time</string>
    <string name="closing_time">Closing time</string>
    <string name="toast_invalid_times">Invalid times</string>
    <string name="toast_invalid_arg">No valid data</string>
    <string name="dialog_title_you_must_select_place">You must select a field</string>
    <string name="dialog_msg_you_must_select_place">A field is needed in order to look up for sports events.
        You can also create a new Field by click in the icon add above.</string>
    <string name="dialog_title_create_new_field">Create new Field</string>
    <string name="dialog_msg_create_new_field">Do you want to create a new Field?</string>
    <string name="dialog_msg_create_new_field_for_alarm">There isn\'t Fields for this sport but isn\'t needed in
         order to create a new Alarm. Anyway… Do you want to create a new Field now?</string>
    <string name="dialog_msg_create_new_field_for_event">There isn\'t Fields for this sport and it is needed in
         order to create a new Event. Do you want to create a new Field now?</string>
    <string name="new_field_title">New Field</string>
    <string name="no_field_selection">You did not select anything</string>
    <string name="court_list">Court list</string>
    <string name="field_detail_title">Field details</string>
    <string name="edit_sports">Edit sports</string>
    <string name="action_change_image">Change image</string>
    <string name="action_change_name">Change name</string>
    <string name="action_change_age">Change age</string>
    <string name="users_found">Users found</string>
</resources>