<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout="@layout/fragment_list">
    <com.usal.jorgeav.sportapp.preferences.CityAutocompleteEditTextPreference
        android:key="pref_city"
        android:title="@string/pref_city_title"
        android:dialogTitle="@string/pref_city_dialog"
        android:inputType="textPostalAddress"
        android:defaultValue=" "/>
    <EditTextPreference
        android:key="pref_email"
        android:title="@string/pref_email_title"
        android:dialogTitle="@string/pref_email_dialog"
        android:inputType="textEmailAddress"
        android:defaultValue=" "
        android:persistent="true"/>
    <EditTextPreference
        android:key="pref_password"
        android:title="@string/pref_password_title"
        android:dialogTitle="@string/pref_password_dialog"
        android:inputType="textVisiblePassword"
        android:defaultValue=" " />
    <Preference
        android:key="pref_reset"
        android:title="@string/pref_reset_title"
        android:defaultValue=" "/>
    <Preference
        android:key="pref_delete"
        android:title="@string/pref_delete_title"
        android:defaultValue=" "/>
</PreferenceScreen>