<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_alarms"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/alarms" />
        <item
            android:id="@+id/nav_fields"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/fields" />
    </group>
    <group
        android:id="@+id/nav_bottom">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_sign_out"
            android:title="@string/action_sign_out" />
    </group>

</menu>
