<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit_sports"
        android:orderInCategory="100"
        android:title="@string/edit_sports"
        android:icon="@drawable/ic_sport"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_change_image"
        android:orderInCategory="101"
        android:title="@string/action_change_image"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_name"
        android:orderInCategory="102"
        android:title="@string/action_change_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_age"
        android:orderInCategory="103"
        android:title="@string/action_change_age"
        app:showAsAction="never" />
</menu>