<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/reauthenticate_dialog_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dialog_horizontal_margin"
        android:layout_marginLeft="@dimen/dialog_horizontal_margin"
        android:layout_marginRight="@dimen/dialog_horizontal_margin"
        android:layout_marginStart="@dimen/dialog_horizontal_margin"
        android:layout_marginTop="@dimen/dialog_vertical_margin"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reauthenticate_dialog_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dialog_horizontal_margin"
        android:layout_marginLeft="@dimen/dialog_horizontal_margin"
        android:layout_marginRight="@dimen/dialog_horizontal_margin"
        android:layout_marginStart="@dimen/dialog_horizontal_margin"
        android:layout_marginTop="@dimen/dialog_vertical_margin_inner"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionGo"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reauthenticate_dialog_email" />

    <ImageView
        android:id="@+id/reauthenticate_dialog_visible_pass"
        android:layout_width="@dimen/edittext_icon_size"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/image_button_margin"
        android:layout_marginRight="@dimen/image_button_margin"
        android:cropToPadding="true"
        android:paddingBottom="@dimen/edittext_icon_below"
        android:src="@drawable/ic_action_view_password"
        app:layout_constraintBottom_toBottomOf="@+id/reauthenticate_dialog_password"
        app:layout_constraintRight_toRightOf="@+id/reauthenticate_dialog_password" />

</android.support.constraint.ConstraintLayout>