<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/new_user_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="32dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/new_user_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_user_email" />

            <ImageView
                android:id="@+id/new_user_visible_pass"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:cropToPadding="true"
                android:paddingBottom="@dimen/edittext_icon_below"
                android:src="@drawable/ic_action_view_password"
                app:layout_constraintBottom_toBottomOf="@+id/new_user_password"
                app:layout_constraintRight_toRightOf="@+id/new_user_password" />

            <ImageView
                android:id="@+id/new_user_photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="32dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_user_password"
                app:srcCompat="@drawable/profile_picture_placeholder" />

            <ImageView
                android:id="@+id/new_user_photo_button"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_margin="@dimen/image_button_margin"
                android:cropToPadding="true"
                android:src="@drawable/ic_action_edit_dark"
                app:layout_constraintBottom_toBottomOf="@+id/new_user_photo"
                app:layout_constraintLeft_toRightOf="@+id/new_user_photo" />

            <EditText
                android:id="@+id/new_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:padding="@dimen/activity_horizontal_margin"
                android:hint="@string/prompt_name"
                android:inputType="textPersonName|textCapWords"
                android:maxLines="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/new_user_photo" />

            <EditText
                android:id="@+id/new_user_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:padding="@dimen/activity_horizontal_margin"
                android:hint="@string/prompt_age"
                android:inputType="number"
                android:maxLines="1"
                app:layout_constraintLeft_toLeftOf="@+id/guideline6"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_user_photo" />


            <AutoCompleteTextView
                android:id="@+id/new_user_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:padding="@dimen/activity_horizontal_margin"
                android:hint="@string/prompt_city"
                android:inputType="textPostalAddress|textAutoComplete|textCapSentences"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_user_name" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.65" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>