<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:background="@android:color/background_light"
    tools:context="com.usal.jorgeav.sportapp.mainactivities.FriendsActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/edittext_icon_size"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edittext_icon_margin"
        android:layout_marginStart="@dimen/edittext_icon_margin"
        android:cropToPadding="true"
        android:paddingBottom="@dimen/edittext_icon_below"
        android:src="@drawable/ic_nav_search"
        app:layout_constraintBottom_toBottomOf="@+id/search_users_edit"
        app:layout_constraintLeft_toLeftOf="@+id/search_users_edit" />

    <EditText
        android:id="@+id/search_users_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/prompt_name"
        android:imeActionId="@+id/search_users_ime"
        android:imeActionLabel="@string/action_search_users"
        android:imeOptions="actionGo"
        android:inputType="textPersonName|textCapWords"
        android:maxLines="1"
        android:paddingEnd="0dp"
        android:paddingLeft="@dimen/edittext_icon_size_plus_margin"
        android:paddingRight="0dp"
        android:paddingStart="@dimen/edittext_icon_size_plus_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/users_found"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_users_edit" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_users_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/label_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <include
        android:id="@+id/search_users_placeholder"
        layout="@layout/list_placeholder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/label_margin"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>